...

                <TextView
                    android:id="@+id/book_detail_title"
                    style="@style/TextNormal.BookDetailTitle"
                    android:layout_width="wrap_content"
...

                            <ImageView
                                android:id="@+id/book_detail_book_image"
                                style="@style/AppBackground.Item"
                                android:layout_width="match_parent"
...

                        <TextView
                            android:id="@+id/book_detail_author"
                            style="@style/TextTitle.BookDetailSubTitle"
                            android:layout_width="wrap_content"
...

                            <TextView
                                android:id="@+id/book_detail_book_mark"
                                style="@style/TextNormal.BookDetail"
                                android:layout_width="0dp"
...

                        <TextView
                            android:id="@+id/book_detail_folder"
                            style="@style/TextNormal.BookDetail"
                            android:layout_width="wrap_content"
...

                <HorizontalScrollView
                    android:id="@+id/book_detail_scroll_view"
                    style="@style/AppBackground.Accent"
                    android:layout_width="match_parent"
...

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/book_detail_button_favorite"
                            style="@style/Button.Detail"
                            android:layout_width="0dp"
...

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/book_detail_button_mark_read"
                            style="@style/Button.Detail"
                            android:layout_width="0dp"
...

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/book_detail_button_delete"
                            style="@style/Button.Detail"
                            android:layout_width="0dp"
...

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/book_detail_button_vocabulary"
                            style="@style/Button.Detail"
                            android:layout_width="0dp"
...

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/book_detail_information_menu_autocomplete_language"
                            style="@style/AutoCompleteDropMenu"
                            android:layout_width="match_parent"
...

                    <TextView
                        android:id="@+id/book_detail_information_genres"
                        style="@style/TextNormal"
                        android:layout_width="wrap_content"
...
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/book_detail_information_isbn"
                            style="@style/TextNormal"
                            android:layout_width="0dp"
...

                    <TextView
                        android:id="@+id/book_detail_information_publish"
                        style="@style/TextNormal"
                        android:layout_marginTop="@dimen/margin_small"
...

                    <ListView
                        android:id="@+id/book_detail_information_tags_list"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
...
