...

    <string name="action_confirm">Confirm</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_return">Return</string>
    <string name="action_positive">Yes</string>
    <string name="action_negative">No</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copied: %s</string>
    <string name="action_app_not_installed">Required App is not installed</string>
    <string name="action_scroll_up">Up</string>
    <string name="action_scroll_down">Down</string>
    <string name="action_disconnect">Disconnect</string>
...
    <string name="menu_book_config_tag">Add tags</string>
    <string name="menu_book_config_book_mark">Book mark</string>

    <string name="book_library_share">Book share</string>

    <string name="book_library_default">Default</string>
    <string name="book_library_menu_delete">Delete</string>
    <string name="book_library_menu_clear">Clear history</string>
    <string name="book_library_menu_favorite_add">Add favorite</string>
    <string name="book_library_menu_favorite_remove">Remove favorite</string>
    <string name="book_library_menu_copy">Copy</string>
    <string name="book_library_menu_delete_description">Do you really want to delete the file?</string>

...
