...
    android:paddingTop="@dimen/default_navigator_header_margin_top"
    android:clipToPadding="false"
    android:clipChildren="false"
    tools:context=".view.ui.help.HelpFragment">

    <ScrollView
        android:id="@+id/help_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
...
            android:layout_marginTop="@dimen/margin_big"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/help_content_title"
                style="@style/TextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/help_content"
                android:textSize="@dimen/help_title_size" />

            <TextView
                android:id="@+id/help_library_content"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_library_content"
                android:textSize="@dimen/help_content_size" />

            <TextView
                android:id="@+id/help_reader_content"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_reader_content"
                android:textSize="@dimen/help_content_size" />

...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_subtitle_vocabulary_content"
                android:textSize="@dimen/help_content_size" />

            <TextView
                android:id="@+id/help_vocabulary_content"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_vocabulary_content"
                android:textSize="@dimen/help_content_size" />

...
                style="@style/MaterialDivider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin" />

            <TextView
                android:id="@+id/help_vocabulary_title"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/help_vocabulary_title"
                android:textSize="@dimen/help_title_size" />
...
                app:srcCompat="@mipmap/tutorial_sharemark_backup" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/help_scroll_up"
        style="@style/FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="@dimen/help_scrolling_button_margin"
        android:contentDescription="@string/action_scroll_up"
...
